[package]
name = "qrcode"
description = "QR code encoder in Rust"
license = "MIT OR Apache-2.0"
version = "0.13.0"
edition = "2021"
authors = ["kennytm <kennytm@gmail.com>"]
keywords = ["qrcode"]
repository = "https://github.com/kennytm/qrcode-rust"
readme = "README.md"
documentation = "http://docs.rs/qrcode"
exclude = [
    ".travis.yml", ".gitignore", "test-data/**"
]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
image = { version = "0.25", default-features = false, optional = true }

[dev-dependencies]
image = "0.25"

[features]
default = ["image", "svg"]
bench = []
svg = []

[[bin]]
name = "qrencode"

[[example]]
name = "encode_image"
required-features = ["image"]

[[example]]
name = "encode_string"

[[example]]
name = "encode_svg"
required-features = ["svg"]
